--- a/DB_ECommerce.Application/DB_ECommerce.Application.csproj
+++ b/DB_ECommerce.Application/DB_ECommerce.Application.csproj
@@ -17,4 +17,9 @@
 		<ProjectReference Include="..\DB_ECommerce.Models\DB_ECommerce.Models.csproj" />
 		<ProjectReference Include="..\DB_ECommerce.Persistence\DB_ECommerce.Persistence.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Payment\" />
+	  <Folder Include="Shipments\" />
+	</ItemGroup>
 </Project>
