--- a/DB_ECommerce.MVC/DB_ECommerce.MVC.csproj
+++ b/DB_ECommerce.MVC/DB_ECommerce.MVC.csproj
@@ -31,4 +31,20 @@
 		<ProjectReference Include="..\DB_ECommerce.Persistence\DB_ECommerce.Persistence.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="ViewModels\Customers\" />
+	  <Folder Include="ViewModels\Shipments\" />
+	  <Folder Include="ViewModels\Products_Orders\" />
+	  <Folder Include="ViewModels\Products_Categories\" />
+	  <Folder Include="ViewModels\Products\" />
+	  <Folder Include="ViewModels\Payments\" />
+	  <Folder Include="ViewModels\Orders\" />
+	  <Folder Include="Views\Shipments\" />
+	  <Folder Include="Views\Products_Orders\" />
+	  <Folder Include="Views\Products_Categories\" />
+	  <Folder Include="Views\Products\" />
+	  <Folder Include="Views\Payments\" />
+	  <Folder Include="Views\Orders\" />
+	</ItemGroup>
+
 </Project>
