--- a/DB_ECommerce.MVC/appsettings.json
+++ b/DB_ECommerce.MVC/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "E-CommerceDb": "Server=localhost;Database=E-Commerce;Trusted_Connection=True;ConnectRetryCount=0;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=.;Database=DB_ECommerce;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "MongoDbSettings": {
         "ConnectionString": "mongodb://localhost:27017",
@@ -19,3 +19,8 @@
         "Password": ""
     }
 }
+
+
+
+
+
