--- a/DB_ECommerce.MVC/appsettings.json
+++ b/DB_ECommerce.MVC/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.;Database=DB_ECommerce;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=.\\SQLEXPRESS;Database=E-Commerce;Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "MongoDbSettings": {
         "ConnectionString": "mongodb://localhost:27017",
