Initial commit. Added files and code Structure for Create. Access to be tested

--- a/DB_ECommerce.MVC/appsettings.json
+++ b/DB_ECommerce.MVC/appsettings.json
@@ -9,10 +9,10 @@
     "ConnectionStrings": {
         "DefaultConnection": "Server=.\\SQLEXPRESS;Database=E-Commerce;Trusted_Connection=True;TrustServerCertificate=True;"
     },
-    "MongoDbSettings": {
-        "ConnectionString": "mongodb://localhost:27017",
-        "E-CommerceDbName": "E-Commerce"
-    },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb+srv://service_ecommerce:lDPXUUtVSqDr7v48@cluster0.0hrsg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "DatabaseName": "e_commerce_DB"
+  },
     "RedisSettings": {
         "Host": "127.0.0.1",
         "Port": "6379",
